# lofr

./: CMakeLists.txt  loafrc.sh  loafrd.service.in  loafrd.sh
cmake/Modules/: systemd.cmake
